# miranda

./: .gitignore  Dockerfile  Dockerfile.playwright  LICENSE  README.md  chat.py  client_secrets.json  commands.py  common.py  config.ini  core.py  dc.playwright.yml  docker-compose.yml  entrypoint.sh  goodgame.py  obs.py  peka2tv.py  post.sh  pyproject.toml  requirements.txt  server.py  twitch.json  twitch.py  update.sh  youtube.py
app/: chat.py  client_secrets.json  commands.py  common.py  config.ini  config.py  core.py  goodgame.py  json_.py  miranda.py  peka2tv.py  sc2tv.py  server.py  twitch.json  twitch.py  wasd.py  youtube.py
app/store/: base.css  common.js
app/store/2b/: init.js  style.css
app/store/base/: init.js  style.css
app/store/stream/: init.js  style.css
app/templates/: 2b.html  base.html  stream.html
miranda/: __main__.py  chat.py  commands.py  common.py  config.py  eww.py  goodgame.py  sc2tv.py  server.py  tipizator.py  tipizator_tests.py  twitch.py  vkplay.py  vkplay_playwright.py  youtube.py  youtube_playwright.py  youtube_rss.py
store/base/: init.js  style.css
store/js/: functions.js
store/stream/: init.js  style.css
templates/: base.html  close.html  stream.html
themes/: common.css  common.js
themes/2b/: index.html  init.js
themes/main/: index.html  init.js  style.css
themes/stream/: index.html  init.js  style.css
