[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "google-api-python-client==2.179.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "httpx==0.28.1",
    "websockets==15.0.1",
]
license = {file = "LICENSE"}
name = "miranda"
readme = "README.md"
requires-python = ">=3.11"
version = "20250815"
